wip: create scaffolds docs

--- a/docs/how-to-guides/webiny-cli/scaffolding/new-full-stack-application.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/new-full-stack-application.mdx
@@ -8,20 +8,20 @@ description: Learn how to use the New Full Stack Application scaffold.
 
 :::info Can I use this?
 
-The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) received a major overhaul in [Webiny 5.9.0](/docs/changelog/5.9.0). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
+This feature is available since **v5.13.0**.
 
 :::
 
 :::tip What you'll learn
 
-- main features of the **Extend GraphQL API** scaffold
+- main features of the **New Full Stack Application** scaffold
 - how to continue developing on top of the generated application code
 
 :::
 
 ## Overview
 
-The **Extend GraphQL API** scaffold extends your project's GraphQL HTTP API with a new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
+The **New Full Stack Application** scaffold extends your project's GraphQL HTTP API with a new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
 Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
@@ -33,7 +33,7 @@ Learn more about the **API** project application on the cloud infrastructure lev
 
 ### New CRUD Query and Mutation Operations
 
-The **Extend GraphQL API** extends your GraphQL API with two query and three mutation operations.
+The **New Full Stack Application** extends your GraphQL API with two query and three mutation operations.
 
 The names of these depend on the name of the initial data model, which is specified during the scaffold's wizard. For example, by passing **CarManufacturer** as the initial data model name, the GraphQL API will be extended with the following queries and mutations:
 
