--- a/docs/how-to-guides/webiny-cli/scaffolding/new-react-application.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/new-react-application.mdx
@@ -6,22 +6,25 @@ keywords: ["scaffolding", "new", "react", "application"]
 description: Learn how to use the New React Application scaffold.
 ---
 
+import CenteredImage from "@components/CenteredImage"
+import cloudInfrastructureDiagram from "./new-react-application/new_react_app_scaffold.png";
+
 :::info Can I use this?
 
-The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) received a major overhaul in [Webiny 5.9.0](/docs/changelog/5.9.0). Note that this guide is not relevant for projects that are using Webiny 5.8.0 and lower.
+This feature is available since **v5.13.0**.
 
 :::
 
 :::tip What you'll learn
 
-- main features of the **Extend GraphQL API** scaffold
+- main features of the **New React Application** scaffold
 - how to continue developing on top of the generated application code
 
 :::
 
 ## Overview
 
-The **Extend GraphQL API** scaffold extends your project's GraphQL HTTP API with a new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
+The **New React Application** scaffold extends your project's GraphQL HTTP API with a new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
 Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
@@ -31,79 +34,15 @@ Learn more about the **API** project application on the cloud infrastructure lev
 
 ## Features
 
-### New CRUD Query and Mutation Operations
+### Clean Setup
 
-The **Extend GraphQL API** extends your GraphQL API with two query and three mutation operations.
+Except for the base application and cloud infrastructure code, the created GraphQL API does not contain any additional code or specific business logic. You can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
 
-The names of these depend on the name of the initial data model, which is specified during the scaffold's wizard. For example, by passing **CarManufacturer** as the initial data model name, the GraphQL API will be extended with the following queries and mutations:
+### Simple Cloud Infrastructure
 
-```graphql
-type CarManufacturerQuery {
-  # Returns a single CarManufacturer entry by given ID.
-  getCarManufacturer(id: ID!): CarManufacturer
+Only a couple of cloud infrastructure resources need to be deployed in order to host a new GraphQL API, which is depicted with the following diagram:
 
-  # Returns a list of CarManufacturer entries. Supports basic sorting and pagination.
-  listCarManufacturers(
-    limit: Int
-    before: String
-    after: String
-    sort: CarManufacturersListSort
-  ): CarManufacturersList!
-}
-
-type CarManufacturerMutation {
-  # Creates and returns a new CarManufacturer entry.
-  createCarManufacturer(data: CarManufacturerCreateInput!): CarManufacturer!
-
-  # Updates and returns an existing CarManufacturer entry.
-  updateCarManufacturer(id: ID!, data: CarManufacturerUpdateInput!): CarManufacturer!
-
-  # Deletes and returns an existing CarManufacturer entry.
-  deleteCarManufacturer(id: ID!): CarManufacturer!
-}
-
-extend type Query {
-  carManufacturers: CarManufacturerQuery
-}
-
-extend type Mutation {
-  carManufacturers: CarManufacturerMutation
-}
-```
-
-:::info
-If you want to check out the full GraphQL schema that's generated during the scaffolding, take a look at the [template](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) that's used in the process.
-:::
-
-### Storing and Retrieving Data
-
-All of the generated GraphQL queries and mutations rely on a single database for storing and retrieving data. By default, this is [AWS DynamoDB](https://aws.amazon.com/dynamodb/), which is defined in [`api/pulumi/dev/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/dev/dynamoDb.ts) and [`api/pulumi/prod/dynamoDb.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/api/pulumi/prod/dynamoDb.ts).
-
-For all database interactions, the generated application code relies on a library called [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox):
-
-> The DynamoDB Toolbox is a set of tools that makes it easy to work with Amazon DynamoDB and the DocumentClient. It's designed with Single Tables in mind, but works just as well with multiple tables.
-
-Note that if you prefer a different library, like for example the [DynamoDB Document Client](https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/dynamodb-example-document-client.html), you're free to use it, but it will require some manual migration work.
-
-### Multi-Locale Support Enabled
-
-By default, Webiny Admin Area is a multi-locale system, which means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
-
-The generated application code follows the same idea. There aren't any additional steps that you need to takefyo in order to enable multi-locale support.
-
-### Testing Setup
-
-With the application code, the scaffold also generates one unit, one integration, and one end-to-end (E2E) test, which you can use as a reference in further development. All of the tests can be found in the [`__tests__`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__) folder located within the scaffolded application code. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section below.
-
-:::tip
-A brief overview of different types of tests can be found in the [CI/CD / Testing](/docs/key-topics/ci-cd/testing#application-testing---a-brief-overview) key topic.
-:::
-
-### No Additional Cloud Infrastructure Resources
-
-The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing GraphQL API application code ([`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql)).
-
-Of course, if additional cloud infrastructure resources are needed, you're free to amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/pulumi), and reference the added and deployed resources in your application code.
+<CenteredImage shadow={false} alt="Cloud Infrastructure Resources" src={cloudInfrastructureDiagram} />
 
 ## Development
 
