--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
@@ -115,27 +115,27 @@ The following are the most essential files and folders that are generated in the
 By default, all of the files are generated in a new folder, located at `api/code/graphql/src/plugins/scaffolds/{dataModelName}`, for example `api/code/graphql/src/plugins/scaffolds/carManufacturers`.
 :::
 
-[`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts)
+#### [`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts)
 
 This is the entry file, which exports the [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts) plugin responsible for extending the existing GraphQL API schema, using new [type definitions](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L13) and supporting [resolvers](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L14-L25).
 
-[`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts)
+#### [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts)
 
 A file that contains the schema with which we are extending our GraphQL API. This will usually be the starting point if you want to make further changes to the generated code, for example add new fields to the initial data model, add new GraphQL query or mutation operations, and more.
 
 Note that in the case of the latter, you also need to define a standalone resolver function that is responsible for handling newly added query or mutation operation.
 
-[`resolvers/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/resolvers)
+#### [`resolvers/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/resolvers)
 
 This folder contains the GraphQL resolver classes that support the generated [query](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) and [mutation](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsMutation.ts) GraphQL operations.
 
 These will need to be updated as you make changes in the mentioned [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) file. For example, if you were to introduce a new `listPopularCarManufacturers` GraphQL query, the same `listPopularCarManufacturers` method would need to be defined within the [`CarManufacturersQuery`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) class.
 
-[`entities/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/entities)
+#### [`entities/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/entities)
 
 Contains [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox) entities, which are used within GraphQL resolver functions. You are free to add additional entities, or modify the existing one (for example - add new entity attributes).
 
-[`__tests__/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__)
+#### [`__tests__/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__)
 
 Contains tests that ensure your application code is working as expected. As mentioned, three tests are included by default: one unit, one integration, and one end-to-end (E2E) test.
 
