--- a/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api.mdx
@@ -24,14 +24,15 @@ This feature is available since **v5.13.0**.
 
 ## Overview
 
-The **New GraphQL API** scaffold creates a new standalone GraphQL HTTP API, which can be utilized by your frontend applications. Once created, you can start extending it either manually via the existing [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, or even the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold.
+The **New GraphQL API** scaffold creates a new standalone GraphQL HTTP API, which can be utilized by your frontend applications. Once created, you can start extending it either manually via the existing [`GraphQLSchemaPlugin`](/docs/how-to-guides/extend-graphql-api) plugins, or even the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold.
 
 ##
+
 ## Features
 
 ### Clean Setup
 
-Except for the base application and cloud infrastructure code, the created GraphQL API does not contain any additional code or specific business logic. It's a *clean slate* and you can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
+Except for the base application and cloud infrastructure code, the created GraphQL API does not contain any additional code or specific business logic. It's a _clean slate_ and you can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
 
 Be sure to check the [Development](/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api#development) section below to learn more.
 
@@ -39,91 +40,133 @@ Be sure to check the [Development](/docs/how-to-guides/webiny-cli/scaffolding/ne
 
 Only a couple of cloud infrastructure resources need to be deployed in order to host a new GraphQL API, which is depicted by the following diagram:
 
-<CenteredImage shadow={false} alt="Cloud Infrastructure Resources" src={cloudInfrastructureDiagram} />
+<CenteredImage
+  shadow={false}
+  alt="Cloud Infrastructure Resources"
+  src={cloudInfrastructureDiagram}
+/>
 
 As shown, the scaffold will also include a single Amazon DynamoDB <diagram-letter>D</diagram-letter> table, which you can use for all of your GraphQL API's data storing and retrieval needs. In case you need additional databases, you're free to include them (more on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api#development) section below).
 
-Additionally, note that when [deploying](/docs/how-to-guides/deployment/deploy-your-project) into the production (`prod`) environment, the GraphQL Handler AWS Lambda <diagram-letter>C</diagram-letter> function will be deployed into a new [Amazon Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/). Down the line, doing this for cloud infrastructure resources can improve your GraphQL API's overall security posture.
+Additionally, note that when [deploying](/docs/how-to-guides/deployment/deploy-your-project) into the `prod` (production) environment, the GraphQL Handler AWS Lambda <diagram-letter>C</diagram-letter> function will be deployed into a new [Amazon Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/). Down the line, doing this for cloud infrastructure resources can improve your GraphQL API's overall security posture.
 
 ### Compatible With the Existing Extend GraphQL API Scaffold
 
 In order to speed up development, you can use the existing [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold to quickly extend the created GraphQL API with new sets of essential CRUD GraphQL query and mutation operations.
 
-In fact, during the **New GraphQL API** scaffold's setup wizard, users will be asked if they want to immediately do that.
+### Testing
 
-### Testing Ready
-
-Except for the application and cloud infrastructure code, the scaffold also generates the necessary [Jest](/docs/key-topics/tools-libraries#testing) configuration and foundation for testing the GraphQL API functionality you'll be building.
+Except for the application and cloud infrastructure code, the scaffold also generates the necessary [Jest](/docs/key-topics/tools-libraries#testing) configuration and foundation for testing the GraphQL API functionality you'll be building. The already mentioned [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffolds takes advantage of this and immediately creates a couple of example tests you can use for reference.
 
 ## Development
 
-### Essential Files
+### Essential Files and Folders
 
-The following are the most essential files and folders that are generated in the scaffolding process.
+The following are the most essential files and folders that are generated during the scaffolding process.
 
-[`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
+```bash title="New GraphQL API Folder"
+├── code
+│   └── graphql
+│       ├── src                    # GraphQL API application code.
+│       │   ├── plugins            # All plugins go here.
+│       │   │   └── scaffolds
+│       │   │       └── index.ts
+│       │   ├── index.ts           # Application's entrypoint file.
+│       │   └── types.ts           # Global types.
+│       ├── jest.config.js         # Jest config file.
+│       ├── package.json           # Package's manifest file.
+│       ├── tsconfig.json          # TypeScript config file.
+│       └── webiny.config.ts       # Webiny config file (contains build scripts).
+├── pulumi                         # Cloud infrastructure code.
+│   ├── dev
+│   ├── prod
+│   └── index.ts              # Cloud infrastructure code entrypoint file.
+├── Pulumi.yaml               # Pulumi project file.
+├── tsconfig.json             # TypeScript configuration used with the Pulumi cloud infrastructure code.
+└── webiny.application.ts     # Project application's manifest file.
+```
 
-This is the folder that contains all of the cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
+:::info
+The path in which the new GraphQL API and all of its files and folders are created is specified in the scaffold's wizard.
+:::
 
-If we were to compare the two, we'd find that the code located in the `prod` folder also deploys a new [Amazon Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/) and that the single AWS Lambda function is deployed into it. Down the line, doing this for cloud infrastructure resources can improve our GraphQL API's overall security posture.
+#### [`code/graphql/src/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
 
-Note that, by default, the code in the `prod` folder will only be used when deploying into the `prod` environment. If you wish to also use this
+Contains the GraphQL API application code. This is where you'll be defining the GraphQL schema, resolver functions, business logic, authentication / authorization logic, writing tests, and potentially more.
+
+#### [`code/graphql/src/types.ts`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts)
+
+Contains global type definitions, that can be imported in different places in your application code.
+
+When created, it only exports the [`Context`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts#L9) interface, which defines the `context` object that you will often be using while creating GraphQL resolver functions. If you will be extending the `context` object, for example via custom [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/handler/src/plugins/ContextPlugin.ts#L7) plugins, an update to this interface should be made as well. By doing this, you and your team will benefit from improved type-safety and easier discovery process.
+
+#### [`code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
+
+This is where you'll be creating plugins, either manually or via other scaffolding utilities, for example via the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold.
+
+:::tip
+Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
+:::
+
+#### [`code/graphql/jest.config.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/jest.config.js)
+
+The config for the [Jest](/docs/key-topics/tools-libraries#testing) testing framework. Feel free to adjust it to your needs.
+
+#### [`code/graphql/.babelrc.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/.babelrc.js)
+
+The config for the [Babel](/docs/key-topics/tools-libraries#building-code) JavaScript compiler. Feel free to adjust it to your needs.
+
+#### [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json)
+
+In case you missed it, every Webiny project is organized as a monorepo, which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json) manifest file exists.
+
+In most cases, this file will only be modified when new NPM packages are added.
+
+:::info
+Learn more about the monorepo organization in the [Monorepo Organization](/docs/key-topics/project-organization/monorepo-organization) key topic.
+:::
+
+#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
+
+This is the folder that contains all of the cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
+
+If we were to compare the two, we'd find that the code located in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder also deploys a new [Amazon Virtual Private Cloud (VPC)](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/vpc.ts#L3) and that the single AWS Lambda function is [deployed into it](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/graphql.ts#L87). Down the line, doing this for cloud infrastructure resources can improve our GraphQL API's overall security posture.
+
+Note that, by default, the cloud infrastructure code in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder will only be used when deploying into the `prod` (production) environment. If you maybe wish to deploy the same into another environment, for example `staging`, you can set this in the [`pulumi/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/index.ts#L8) entrypoint file.
+
+:::info
+Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webiny relies on, in the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
+:::
+
+### Extending the GraphQL API
+
+The new GraphQL API can be extended in two ways.
+
+A more manual approach would be to create and register new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, via which you define how you want to extend the GraphQL schema and all of the resolver functions. To learn more, take a look at the the [Extend GraphQL API](/docs/how-to-guides/extend-graphql-api) guide.
+
+On the other hand, a much faster way of extending the GraphQL API would be to use the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold, which not only creates all of the boilerplate code, but also a set of essential GraphQL query and mutations, sets up the database connection, generates sample tests, and more.
 
 ### First Deploy
 
-Once you've completed the scaffold's wizard and the files have been generated, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+Once you've completed the scaffold's wizard and the files have been generated, in order to actually access the GraphQL API, you need to deploy it. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
 
 ### Development Using the Watch Command
 
-The most straightforward way to further develop on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command.
+The most straightforward way to continue developing on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command.
 
 In order to get started, from your project root, simply run the following command:
 
 ```
-yarn webiny watch api/code/graphql --env {env}
+yarn webiny watch {graphql-api-path} --env {env}
 ```
 
 With the new watch session initialized, every change you make in the code will automatically trigger a re-deploy of the code, enabling you to see the changes in the cloud almost immediately as you make them (every redeployment takes 2-4 seconds to complete).
 
-And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend the new code to be tested via one or more of the mentioned types of tests.
-
-### Writing and Running Tests
-
-As mentioned in the [Features](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#features) section, by default, the scaffold includes three tests: one unit, one integration, and one end-to-end (E2E) test. When generated, all three tests should be passing once you run them, but do note that in order for the integration and end-to-end (E2E) tests to pass, you have to have your **API** project application already deployed, preferably into a development environment, for example `dev`.
-
-:::info
-To run the tests, Webiny relies on [Jest](/docs/key-topics/tools-libraries#testing), a JavaScript testing framework with a focus on simplicity.
-:::
-
-#### Initial Test Files
-
-#### [`typeDefs.unit.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/typeDefs.unit.test.ts)
-
-A simple unit test which simply ensures that the base GraphQL type exists. Might not be a super useful example, but still, this test is here more for awareness purposes (so that developers know these can be added too).
-
-#### [`crud.integration.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/crud.integration.test.ts)
-
-An integration test which ensures essential CRUD GraphQL query and mutation operations are working as expected. These tests are run against the application code that you have locally, but note that the code is still interacting with real cloud infrastructure resources.
-
-#### [`crud.e2e.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/crud.e2e.test.ts)
-
-An end-to-end (E2E) test which ensures essential CRUD GraphQL query and mutation operations are working as expected.
-
-Note that, although it may seem this test is testing the same functionality we've tested with the integration test, this test is run against the application code that's deployed into the actual cloud, by issuing HTTP requests to the deployed Cloudfront distribution, behind which our AWS Lambda function resides. In other words, this test makes sure not only our code is working as expected, but also that the cloud infrastructure resources are deployed and configured properly.
-
-#### Running Tests
-
-All of the test-running scripts can already be found in your root [package.json](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/dependencies.json#L68-L71) file.
-
-In order to run all tests, use the `yarn test` command. Additionally, to only run tests of a specific type, use the `yarn test:unit`, `yarn test:integration`, and `yarn test:e2e` commands.
+And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend the new code to be tested via one or more different types of tests.
 
 :::tip
-Jest supports the [`--watch`](https://jestjs.io/docs/cli#--watch) argument, which enables us to continuously re-run tests as we're making changes to them. You can use it with the above-shown commands.
+To learn more about how to write different types of tests, we recommend you check out the [Writing and Running Tests](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#writing-and-running-tests) section in the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) guide.
 :::
-
-#### Creating New Tests
-
-You are free to create new tests in the similar fashion, or amend the existing one.
 
 ## FAQ
 
@@ -134,3 +177,5 @@ Please note that, by default, the authentication and authorization logic isn't i
 Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/extend-admin-area/security/introduction) to learn how to implement these on your own.
 
 #### Do I need to deploy the created GraphQL API in order to continue development?
+
+Yes, every change that you make needs to be deployed into the cloud, in order to actually see it in action. At the moment, the local-development option isn't supported.
