--- a/docs/how-to-guides/development/importing-plugins.mdx
+++ b/docs/how-to-guides/development/importing-plugins.mdx
@@ -25,14 +25,14 @@ This article explains how to add plugins to:
 
 ## React Applications
 
-Both **Admin Area** and **Website** React applications follow the same folder structure, and so, the process of registering new plugins into both apps is the same.
+Both **Admin Area** and **Website** React applications follow the same folder structure, and so, the process of registering new plugins into both applications is the same.
 
 The plugins entry files for these applications can be found at the following locations:
 
 - Admin Area -> [**apps/admin/code/src/plugins/index.ts**](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/src/plugins/index.ts)
 - Website -> [**apps/website/code/src/plugins/index.ts**](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts)
 
-To register a new plugin, you need to navigate to the appropriate plugins entry files, and add your plugin to the end of the array that is being registered into the [PluginsContainer](/docs/key-topics/plugins#plugins-container).
+To register a new plugin, you need to navigate to the appropriate plugins entry file, and add your plugin to the end of the array that is being registered into the [PluginsContainer](/docs/key-topics/plugins#plugins-container).
 
 :::tip Organize your plugins
 We always recommend creating a dedicated file, or even a folder, to hold your custom plugins. See [Best Practices](/docs/how-to-guides/development/importing-plugins#best-practices) section for examples.
@@ -58,7 +58,7 @@ With this, your new plugin(s) will be registered into the application.
 
 ## GraphQL APIs
 
-All GraphQL API Lambda function handlers that are present in the default Webiny project follow the same structure, and so, the process of registering new plugins is the same for all of them.
+All GraphQL API Lambda function handlers present in the default Webiny project follow the same structure, and so, the process of registering new plugins is the same for all of them.
 
 We'll cover the two main GraphQL API Lambda function handlers: **Main GraphQL API** and **Headless CMS GraphQL API**. Their entry files can be found at the following locations:
 
