wip: create docs for new scaffolds

--- a/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api.mdx
@@ -24,9 +24,7 @@ This feature is available since **v5.13.0**.
 
 ## Overview
 
-The **New GraphQL API** scaffold creates a new standalone GraphQL HTTP API, which can be utilized by your frontend applications. Once created, you can start extending it either manually via the existing [`GraphQLSchemaPlugin`](/docs/how-to-guides/extend-graphql-api) plugins, or even the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold.
-
-##
+The **New GraphQL API** scaffold creates a new standalone GraphQL HTTP API, which can be utilized by your frontend applications (for example, applications created with the [New React Application](/docs/how-to-guides/webiny-cli/scaffolding/new-react-application) scaffold). Once created, you can immediately deploy it and continue further development with just a couple of [Webiny CLI](/docs/key-topics/webiny-cli) commands.
 
 ## Features
 
@@ -50,6 +48,10 @@ As shown, the scaffold will also include a single Amazon DynamoDB <diagram-lette
 
 Additionally, note that when [deploying](/docs/how-to-guides/deployment/deploy-your-project) into the `prod` (production) environment, the GraphQL Handler AWS Lambda <diagram-letter>C</diagram-letter> function will be deployed into a new [Amazon Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/). Down the line, doing this for cloud infrastructure resources can improve your GraphQL API's overall security posture.
 
+:::info
+During the scaffold's setup wizard, you will be asked if you want to immediately deploy the needed cloud infrastructure resources. If you decide not to do it, you can deploy it later, as usual, with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+:::
+
 ### Compatible With the Existing Extend GraphQL API Scaffold
 
 In order to speed up development, you can use the existing [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold to quickly extend the created GraphQL API with new sets of essential CRUD GraphQL query and mutation operations.
@@ -64,7 +66,7 @@ Except for the application and cloud infrastructure code, the scaffold also gene
 
 The following are the most essential files and folders that are generated during the scaffolding process.
 
-```bash title="New GraphQL API Folder"
+```bash title="New GraphQL API Folder (Some Files Removed for Brevity)"
 ├── code
 │   └── graphql
 │       ├── src                    # GraphQL API application code.
