--- a/docs/how-to-guides/webiny-cli/scaffolding/new-react-application.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/new-react-application.mdx
@@ -6,8 +6,9 @@ keywords: ["scaffolding", "new", "react", "application"]
 description: Learn how to use the New React Application scaffold.
 ---
 
-import CenteredImage from "@components/CenteredImage"
+import CenteredImage from "@components/CenteredImage";
 import cloudInfrastructureDiagram from "./new-react-application/new_react_app_scaffold.png";
+import preview from "./new-react-application/preview.png";
 
 :::info Can I use this?
 
@@ -24,115 +25,146 @@ This feature is available since **v5.13.0**.
 
 ## Overview
 
-The **New React Application** scaffold extends your project's GraphQL HTTP API with a new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
+As the name suggests, the **New React Application** scaffold creates a new standalone React application. It consists of a couple of simple pages and examples which makes it possible to quickly get started with building a new frontend application.
 
-Note that, when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/code/graphql) folder.
-
-:::info
-Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
-:::
+<CenteredImage shadow={false} canEnlarge={false} alt="The New React Application" src={preview} />
 
 ## Features
 
 ### Clean Setup
 
-Except for the base application and cloud infrastructure code, the created GraphQL API does not contain any additional code or specific business logic. You can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
+Except for the provided example pages, base application and cloud infrastructure code, the created React application does not contain any additional code or specific business logic. It's a _clean slate_ and you can start building on top of the created code in any way you prefer. You can also bring needed libraries, introduce new cloud infrastructure resources, and more.
+
+Be sure to check the [Development](/docs/how-to-guides/webiny-cli/scaffolding/new-graphql-api#development) section below to learn more.
+
+### Simple Page Example
 
 ### Simple Cloud Infrastructure
 
-Only a couple of cloud infrastructure resources need to be deployed in order to host a new GraphQL API, which is depicted with the following diagram:
+Only a couple of cloud infrastructure resources need to be deployed in order to host a new GraphQL API, which is depicted by the following diagram:
 
-<CenteredImage shadow={false} alt="Cloud Infrastructure Resources" src={cloudInfrastructureDiagram} />
+<CenteredImage
+  shadow={false}
+  canEnlarge={false}
+  alt="Cloud Infrastructure Resources"
+  src={cloudInfrastructureDiagram}
+/>
+
+:::info
+The shown cloud infrastructure resources do not need to be deployed immediately after the scaffolding process has been completed. Frontend application development can still be performed locally, on developer's machine. But, once it's time to deploy it, you can do that as usual, with the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+:::
 
 ## Development
 
-### Essential Files
+### Essential Files and Folders
 
-The following are the most essential files and folders that are generated in the scaffolding process.
+The following are the most essential files and folders that are generated during the scaffolding process.
+
+```bash title="New React Application Folder (Some Files Removed for Brevity)"
+├── code
+│   ├── public                    # Contains initial HTML file and meta files.
+│   ├── src                       # React application code.
+│   │   ├── components            # Shared components go here.
+│   │   ├── images                # Images go here.
+│   │   ├── plugins               # All plugins go here.
+│   │   ├── styles                # All SCSS styles go here.
+│   │   ├── App.scss              # SCSS styles entrypoint file.
+│   │   ├── App.tsx               # Contains root `App` React component.
+│   │   ├── apollo.ts             # Sets up the Apollo GraphQL client.
+│   │   └── index.tsx             # Application entrypoint file.
+│   ├── package.json              # Package's manifest file.
+│   ├── tsconfig.json             # TypeScript config file.
+│   └── webiny.config.ts          # Webiny config file (contains build scripts).
+├── pulumi                        # Cloud infrastructure code.
+│   ├── app.ts
+│   ├── cloudfront.ts
+│   └── index.ts                  # Cloud infrastructure code entrypoint file.
+├── Pulumi.yaml                   # Pulumi project file.
+├── tsconfig.json                 # TypeScript configuration used with the Pulumi cloud infrastructure code.
+└── webiny.application.ts         # Project application's manifest file.
+```
 
 :::info
-By default, all of the files are generated in a new folder, located at `api/code/graphql/src/plugins/scaffolds/{dataModelName}`, for example `api/code/graphql/src/plugins/scaffolds/carManufacturers`.
+The path in which the new GraphQL API and all of its files and folders are created is specified in the scaffold's wizard.
 :::
 
-[`index.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts)
+#### [`code/src/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
 
-This is the entry file, which exports the [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts) plugin responsible for extending the existing GraphQL API schema, using new [type definitions](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L13) and supporting [resolvers](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/index.ts#L14-L25).
+Contains the GraphQL API application code. This is where you'll be defining the GraphQL schema, resolver functions, business logic, authentication / authorization logic, writing tests, and potentially more.
 
-[`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts)
+#### [`code/graphql/src/types.ts`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts)
 
-A file that contains the schema with which we are extending our GraphQL API. This will usually be the starting point if you want to make further changes to the generated code, for example add new fields to the initial data model, add new GraphQL query or mutation operations, and more.
+Contains global type definitions, that can be imported in different places in your application code.
 
-Note that in the case of the latter, you also need to define a standalone resolver function that is responsible for handling newly added query or mutation operation.
+When created, it only exports the [`Context`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts#L9) interface, which defines the `context` object that you will often be using while creating GraphQL resolver functions. If you will be extending the `context` object, for example via custom [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/handler/src/plugins/ContextPlugin.ts#L7) plugins, an update to this interface should be made as well. By doing this, you and your team will benefit from improved type-safety and easier discovery process.
 
-[`resolvers/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/resolvers)
+#### [`code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
 
-This folder contains the GraphQL resolver classes that support the generated [query](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) and [mutation](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsMutation.ts) GraphQL operations.
+This is where you'll be creating plugins, either manually or via other scaffolding utilities, for example via the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold.
 
-These will need to be updated as you make changes in the mentioned [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) file. For example, if you were to introduce a new `listPopularCarManufacturers` GraphQL query, the same `listPopularCarManufacturers` method would need to be defined within the [`CarManufacturersQuery`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) class.
+:::tip
+Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
+:::
 
-[`entities/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/entities)
+#### [`code/graphql/jest.config.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/jest.config.js)
 
-Contains [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox) entities, which are used within GraphQL resolver functions. You are free to add additional entities, or modify the existing one (for example - add new entity attributes).
+The config for the [Jest](/docs/key-topics/tools-libraries#testing) testing framework. Feel free to adjust it to your needs.
 
-[`__tests__/`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__)
+#### [`code/graphql/.babelrc.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/.babelrc.js)
 
-Contains tests that ensure your application code is working as expected. As mentioned, three tests are included by default: one unit, one integration, and one end-to-end (E2E) test.
+The config for the [Babel](/docs/key-topics/tools-libraries#building-code) JavaScript compiler. Feel free to adjust it to your needs.
+
+#### [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json)
+
+In case you missed it, every Webiny project is organized as a monorepo, which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json) manifest file exists.
+
+In most cases, this file will only be modified when new NPM packages are added.
+
+:::info
+Learn more about the monorepo organization in the [Monorepo Organization](/docs/key-topics/project-organization/monorepo-organization) key topic.
+:::
+
+#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
+
+This is the folder that contains all of the cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
+
+If we were to compare the two, we'd find that the code located in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder also deploys a new [Amazon Virtual Private Cloud (VPC)](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/vpc.ts#L3) and that the single AWS Lambda function is [deployed into it](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/graphql.ts#L87). Down the line, doing this for cloud infrastructure resources can improve our GraphQL API's overall security posture.
+
+Note that, by default, the cloud infrastructure code in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder will only be used when deploying into the `prod` (production) environment. If you maybe wish to deploy the same into another environment, for example `staging`, you can set this in the [`pulumi/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/index.ts#L8) entrypoint file.
+
+:::info
+Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webiny relies on, in the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
+:::
+
+### Extending the GraphQL API
+
+The new GraphQL API can be extended in two ways.
+
+A more manual approach would be to create and register new [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.11.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10) plugins, via which you define how you want to extend the GraphQL schema and all of the resolver functions. To learn more, take a look at the the [Extend GraphQL API](/docs/how-to-guides/extend-graphql-api) guide.
+
+On the other hand, a much faster way of extending the GraphQL API would be to use the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) scaffold, which not only creates all of the boilerplate code, but also a set of essential GraphQL query and mutations, sets up the database connection, generates sample tests, and more.
 
 ### First Deploy
 
-Once you've completed the scaffold's wizard and the files have been generated, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+Once you've completed the scaffold's wizard and the files have been generated, in order to actually access the GraphQL API, you need to deploy it. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
 
 ### Development Using the Watch Command
 
-The most straightforward way to further develop on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command.
+The most straightforward way to continue developing on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command.
 
 In order to get started, from your project root, simply run the following command:
 
 ```
-yarn webiny watch api/code/graphql --env {env}
+yarn webiny watch {graphql-api-path} --env {env}
 ```
 
 With the new watch session initialized, every change you make in the code will automatically trigger a re-deploy of the code, enabling you to see the changes in the cloud almost immediately as you make them (every redeployment takes 2-4 seconds to complete).
 
-And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend the new code to be tested via one or more of the mentioned types of tests.
-
-### Writing and Running Tests
-
-As mentioned in the [Features](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#features) section, by default, the scaffold includes three tests: one unit, one integration, and one end-to-end (E2E) test. When generated, all three tests should be passing once you run them, but do note that in order for the integration and end-to-end (E2E) tests to pass, you have to have your **API** project application already deployed, preferably into a development environment, for example `dev`.
-
-:::info
-To run the tests, Webiny relies on [Jest](/docs/key-topics/tools-libraries#testing), a JavaScript testing framework with a focus on simplicity.
-:::
-
-#### Initial Test Files
-
-#### [`typeDefs.unit.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/typeDefs.unit.test.ts)
-
-A simple unit test which simply ensures that the base GraphQL type exists. Might not be a super useful example, but still, this test is here more for awareness purposes (so that developers know these can be added too).
-
-#### [`crud.integration.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/crud.integration.test.ts)
-
-An integration test which ensures essential CRUD GraphQL query and mutation operations are working as expected. These tests are run against the application code that you have locally, but note that the code is still interacting with real cloud infrastructure resources.
-
-#### [`crud.e2e.test.ts`](https://github.com/webiny/webiny-js/blob/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__/crud.e2e.test.ts)
-
-An end-to-end (E2E) test which ensures essential CRUD GraphQL query and mutation operations are working as expected.
-
-Note that, although it may seem this test is testing the same functionality we've tested with the integration test, this test is run against the application code that's deployed into the actual cloud, by issuing HTTP requests to the deployed Cloudfront distribution, behind which our AWS Lambda function resides. In other words, this test makes sure not only our code is working as expected, but also that the cloud infrastructure resources are deployed and configured properly.
-
-#### Running Tests
-
-All of the test-running scripts can already be found in your root [package.json](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/dependencies.json#L68-L71) file.
-
-In order to run all tests, use the `yarn test` command. Additionally, to only run tests of a specific type, use the `yarn test:unit`, `yarn test:integration`, and `yarn test:e2e` commands.
+And although developers often choose this approach when developing smaller features or proof of concepts, for anything larger in scope, we recommend the new code to be tested via one or more different types of tests.
 
 :::tip
-Jest supports the [`--watch`](https://jestjs.io/docs/cli#--watch) argument, which enables us to continuously re-run tests as we're making changes to them. You can use it with the above-shown commands.
+To learn more about how to write different types of tests, we recommend you check out the [Writing and Running Tests](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#writing-and-running-tests) section in the [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api) guide.
 :::
-
-#### Creating New Tests
-
-You are free to create new tests in the similar fashion, or amend the existing one.
 
 ## FAQ
 
@@ -142,16 +174,6 @@ Please note that, by default, the authentication and authorization logic isn't i
 
 Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/tutorials/extend-admin-area/security/introduction) to learn how to implement these on your own.
 
-#### I need more flexibility when it comes to data querying. Can I bring in a different database, for example ElasticSearch?
+#### Do I need to deploy the created GraphQL API in order to continue development?
 
-Yes, you can. You can actually utilize the already deployed ElasticSearch cluster that's deployed with every Webiny project, by default.
-
-Until we create a dedicated tutorial on the topic, feel free to ping us via our community [Slack](https://www.webiny.com/slack).
-
-#### Can Webiny's multi-tenancy feature be utilized with this scaffold?
-
-Yes, but do note that since multi-tenancy is part of Webiny's enterprise offering, the relevant multi-tenancy code is not included in the generated application code.
-
-For more information on multi-tenancy, we recommend you check out the [Multi-Tenancy](/docs/key-topics/multi-tenancy) key topic. Also, for any implementation-related questions, feel free to contact us directly via our community [Slack](https://www.webiny.com/slack).
-
-
+Yes, every change that you make needs to be deployed into the cloud, in order to actually see it in action. At the moment, the local-development option isn't supported.
